* Deal with running make install a second time * Install symlinks for link_5 (raw IP), and ppp_21 (IP over PPP)

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -133,4 +133,5 @@ AM_YFLAGS=-d
 EXTRA_DIST=lexer.l parser.y
 
 install-exec-hook:
-	cd $(DESTDIR)$(plugindir) && $(LN_S) eth_2048.so ppp_33.so
+	cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so ppp_33.so
+	cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so link_5.so
