Add support for tsh: trace formats (as braindead as they are)

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -256,7 +256,8 @@ enum base_format_t {
 	TRACE_FORMAT_LEGACY_ETH   =8,
 	TRACE_FORMAT_LINUX_NATIVE =9,
 	TRACE_FORMAT_DUCK	  =10,
-	TRACE_FORMAT_BPF	  =11
+	TRACE_FORMAT_BPF	  =11,
+	TRACE_FORMAT_TSH	  =12
 };
 
 /* RT protocol packet types */
@@ -291,6 +292,7 @@ typedef enum {
 	TRACE_RT_DATA_LEGACY_POS=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_LEGACY_POS, 
 	TRACE_RT_DATA_LEGACY_ETH=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_LEGACY_ETH, 
 	TRACE_RT_DATA_LINUX_NATIVE=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_LINUX_NATIVE,
+	TRACE_RT_DATA_TSH	=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_TSH,
 
 	TRACE_RT_DATA_DLT		= 2000, /**< Pcap doesn't store the
 						  * linktype per packet, and
