--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,7 +2,7 @@
 TRACEDUMP_DIR=tracepktdump
 
 SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats tracestats
-SUBDIRS+=tracereport
+SUBDIRS+=tracereport traceflow
 
 all-hook:
 	for dir in $(SUBDIRS); do make -C $$dir; done
