--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -202,16 +202,20 @@ enum {
 	TRACE_ERR_UNSUPPORTED	= -7
 };
 
-/** Enumeration of DLT types supported by libtrace 
- * These aren't actually DLTs, but LINKTYPE_'s, so becareful when modifying 
- * this.
- */ 
+/** Enumeration of DLT supported by libtrace 
+ */
 typedef enum {
 	TRACE_DLT_NULL = 0,
 	TRACE_DLT_EN10MB = 1,
 	TRACE_DLT_PPP = 9,
 	TRACE_DLT_ATM_RFC1483 = 11,
-	TRACE_DLT_RAW = 101,
+	/* Sigh. This is handled in files with LINKTYPE's */
+#ifdef __OpenBSD__
+	TRACE_DLT_RAW = 14,	
+#else
+	TRACE_DLT_RAW = 12,
+#endif
+	TRACE_DLT_LINKTYPE_RAW = 101,
 	TRACE_DLT_IEEE802_11 = 105,
 	TRACE_DLT_LINUX_SLL = 113,
 	TRACE_DLT_PFLOG = 117,
