Add start time, end time, duration, packets and packets per second reports. Fixes #236 Make the default "all reports" instead of "no reports" for less surprise value.

--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -15,6 +15,7 @@ tracereport_SOURCES = \
 	dir_report.c\
 	error_report.c\
 	flow_report.c\
+	misc_report.c\
 	port_report.c\
 	protocol_report.c\
 	tos_report.c\
