Added a new report type to tracereport which can be used to provide stats as to how much traffic is national / international based on the IP addresses involved. This report does require the user to provide a list of "local" IP ranges. Replaced the "remove" call in traceflow which should make it run a lot faster.

--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -25,6 +25,7 @@ tracereport_SOURCES = \
 	nlp_report.c\
 	ecn_report.c\
 	tcpsegment_report.c\
+	locality_report.c\
 	contain.h\
 	report.h\
 	tracereport.h
