Don't require -lfl we've not needed it in ages

--- a/tools/tracepktdump/Makefile.am
+++ b/tools/tracepktdump/Makefile.am
@@ -4,4 +4,4 @@ EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
 tracepktdump_SOURCES = tracepktdump.cc
-tracepktdump_LDADD = -ltrace -lpacketdump -lfl
+tracepktdump_LDADD = -ltrace -lpacketdump 
