--- a/configure.in
+++ b/configure.in
@@ -48,7 +48,7 @@ AC_HEADER_TIME
 AC_SYS_LARGEFILE
 
 if test "$GCC" = "yes"; then
-	CFLAGS="$CFLAGS -Wall -W"
+	CFLAGS="$CFLAGS -Wall -W -Wmissing-prototypes"
 fi
 
 AC_PROG_LIBTOOL
