--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -81,6 +81,8 @@ BIN_PROTOCOLS+=ip_17.la
 BIN_PROTOCOLS+=ip_33.la 
 # IPv6
 TXT_PROTOCOLS+=ip_41.protocol
+# GRE
+BIN_PROTOCOLS+=ip_47.la
 # ICMP6
 TXT_PROTOCOLS+=ip_58.protocol 
 # SCTP
@@ -109,6 +111,7 @@ ip_1_la_LDFLAGS=-module
 ip_6_la_LDFLAGS=-module
 ip_17_la_LDFLAGS=-module
 ip_33_la_LDFLAGS=-module
+ip_47_la_LDFLAGS=-module
 ip_132_la_LDFLAGS=-module
 
 libpacketdump_la_SOURCES = libpacketdump.cc \
