--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -67,6 +67,8 @@ BIN_PROTOCOLS+=eth_2054.la
 TXT_PROTOCOLS+=eth_33024.protocol	
 # MPLS
 BIN_PROTOCOLS+=eth_34887.la
+# pppoe
+BIN_PROTOCOLS+=eth_34916.la
 # 802.1x
 BIN_PROTOCOLS+=eth_34958.la
 
@@ -105,6 +107,7 @@ link_15_la_LDFLAGS=-module
 eth_2048_la_LDFLAGS=-module
 eth_2054_la_LDFLAGS=-module
 eth_34887_la_LDFLAGS=-module
+eth_34916_la_LDFLAGS=-module
 eth_34958_la_LDFLAGS=-module
 
 ip_1_la_LDFLAGS=-module
