* Added format for Auckland VII-style ATM header captures  * Fixed bug in format_legacy where a non-64 byte record would cause an assert fail - it will now keep trying to read until it gets a 64 byte record or reaches EOF.  * trace_copy_packet was not initializing the cached values sensibly which was wreaking havoc - this is now fixed.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -35,6 +35,7 @@ libtrace_la_SOURCES = $(LIBTRACEIO) trace.c common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
 		format_duck.c format_tsh.c $(NATIVEFORMATS) $(BPFFORMATS) \
+		format_atmhdr.c \
 		libtrace_int.h lt_inttypes.h \
 		linktypes.c protocols.c libtraceio.h link_wireless.c \
 		$(DAGSOURCE) format_erf.h 
