--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -261,7 +261,8 @@ enum base_format_t {
 	TRACE_FORMAT_LINUX_NATIVE =9,
 	TRACE_FORMAT_DUCK	  =10,
 	TRACE_FORMAT_BPF	  =11,
-	TRACE_FORMAT_TSH	  =12
+	TRACE_FORMAT_TSH	  =12,
+	TRACE_FORMAT_ATMHDR	  =13
 };
 
 /* RT protocol packet types */
@@ -298,6 +299,7 @@ typedef enum {
 	TRACE_RT_DATA_LINUX_NATIVE=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_LINUX_NATIVE,
 	TRACE_RT_DATA_TSH	=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_TSH,
 
+	TRACE_RT_DATA_ATMHDR = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_ATMHDR,
 	TRACE_RT_DATA_DLT		= 2000, /**< Pcap doesn't store the
 						  * linktype per packet, and
 						  * thus we have to store it
