* Changed DAG 2.5 code to force it to call dag_advance_stream if it has read 4MB without doing so. This is to ensure that the processed records get freed regularly.  * Changed a couple of internal functions in format_dag24 to be static, which fixes some warnings  * Changed the wording of the configure message that checks for DAG2.4 after failing to find DAG 2.5 or later to make it obvious that we aren't trying to do the same thing twice (and getting inconsistent results!)

--- a/configure.in
+++ b/configure.in
@@ -201,7 +201,7 @@ fi
 
 # Now check for 2.4 DAG drivers which don't install as cleanly!
 if test "$with_dag" != no -a "$libtrace_dag" = false; then
-        AC_MSG_CHECKING(whether we have DAG 2.4 API)
+        AC_MSG_CHECKING(whether we have DAG 2.4 API instead)
 
 	if test -r "$dag_root/lib"; then
 		dag_lib_dir="$dag_root/lib"
