Deprecate wtf/wag

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libtrace.la
-include_HEADERS = libtrace.h dagformat.h wag.h lt_inttypes.h daglegacy.h rt_protocol.h libtraceio.h
+include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h libtraceio.h
 
 extra_DIST = format_template.c
 if HAVE_NETPACKET_PACKET_H
@@ -32,7 +32,7 @@ endif
 EXTRA_DIST=format_dag24.c format_dag25.c
 
 libtrace_la_SOURCES = $(LIBTRACEIO) trace.c common.h \
-		format_erf.c format_pcap.c format_wag.c format_legacy.c \
+		format_erf.c format_pcap.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
 		format_duck.c format_tsh.c $(NATIVEFORMATS) $(BPFFORMATS) \
 		format_atmhdr.c \
