Remove the wag tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -49,7 +49,7 @@ test-format-all: test-format test-decode test-decode2
 	@LD_LIBRARY_PATH="$(libdir)" \
 	DYLD_LIBRARY_PATH="$(libdir)" \
 	./test-decode2 pcap:traces/radius.pcap
-	@for i in erf pcap wtf pcapfile duck legacyatm legacyeth legacypos tsh;\
+	@for i in erf pcap pcapfile duck legacyatm legacyeth legacypos tsh;\
 	do \
 		echo \* Read $$i;				\
 		rm -f traces/*.out.*;				\
@@ -96,12 +96,6 @@ test-convert-all: test-convert
 	@LD_LIBRARY_PATH="$(libdir)" DYLD_LIBRARY_PATH="$(libdir)" ./test-convert erf pcapfile
 	@#LD_LIBRARY_PATH="$(libdir)" DYLD_LIBRARY_PATH="$(libdir)" ./test-convert rtclient erf
 	@#LD_LIBRARY_PATH="$(libdir)" DYLD_LIBRARY_PATH="$(libdir)" ./test-convert rtclient pcap
-	@echo " * wtf -> pcap"
-	@rm -f traces/*.out.*
-	@LD_LIBRARY_PATH="$(libdir)" DYLD_LIBRARY_PATH="$(libdir)" ./test-convert wtf pcap
-	#@echo " * wtf -> wtf"
-	#@rm -f traces/*.out.*
-	#@LD_LIBRARY_PATH="$(libdir)" DYLD_LIBRARY_PATH="$(libdir)" ./test-convert wtf wtf
 
 	@# This doesn't work because pcap doesn't support legacyatm's linketype
 	@# so the packet is converted to a raw IP packet, which when read
